--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "zustand": "^4.4.1"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.3"
   }
 }
