replaces process.env for actual string for each appwrite id bucket

--- a/.env
+++ b/.env
@@ -7,6 +7,6 @@ NEXT_PUBLIC_COLLECTION_ID_POST="6539302a6c4d9c36ab32"
 NEXT_PUBLIC_COLLECTION_ID_LIKE="65392fa21c9c14a7605c"
 NEXT_PUBLIC_COLLECTION_ID_COMMENT="653930c8771adff2319f"
 
-NEX_PUBLIC_BUCKET_NAME="tiktok-clone"
-NEX_PUBLIC_BUCKET_ID="653931b2dd59ca2a7d7c"
+NEXT_PUBLIC_BUCKET_NAME="tiktok-clone"
+NEXT_PUBLIC_BUCKET_ID="653931b2dd59ca2a7d7c"
 NEXT_PUBLIC_PLACEHOLDER_DEFAULT_IMAGE_ID="65393212f3a161559301"
